# LightOS_Orion_RISC-V

./: .gitignore  Cargo.toml  Dockerfile  INSTALL.md  Makefile  README.md  build.rs  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
assets/: splash.txt
boot/: entry.S  linker.ld
docs/: BUNDLE_README.md
kernel/: elf.rs  lib.rs  lock.rs  main.rs  power.rs  prog.rs  uart.rs
kernel/drivers/virtio/: blk.rs  mod.rs  net.rs
kernel/fs/: minix3.rs  mod.rs  ramfs.rs
kernel/mem/: kalloc.rs  layout.rs  mmu.rs  mod.rs  page.rs  uaccess.rs
kernel/nce/: affinity.rs  mod.rs  power.rs
kernel/net/: arp.rs  ethernet.rs  icmp.rs  ipv4.rs  mod.rs  socket.rs  tcp.rs  udp.rs
kernel/sched/: mod.rs  process.rs  round_robin.rs  switch.S
kernel/syscall/: mod.rs  posix.rs
kernel/trap/: clint.rs  context.rs  mod.rs  plic.rs  vector.S
rootfs/etc/: motd
scripts/: boot_test.sh  install.sh  lightos-run.ps1  lightos-run.sh  make_splash.sh  mkfs_minix3.py  test_httpd.py
userspace/: Cargo.toml  user.ld
userspace/.cargo/: config.toml
userspace/hello/: Cargo.toml
userspace/hello/src/: main.rs
userspace/httpget/: Cargo.toml
userspace/httpget/src/: main.rs
userspace/init/: Cargo.toml
userspace/init/src/: main.rs
userspace/libc_shim/: Cargo.toml
userspace/libc_shim/src/: lib.rs
userspace/ncectl/: Cargo.toml
userspace/ncectl/src/: main.rs
userspace/netprobe/: Cargo.toml  build.rs
userspace/netprobe/src/: main.rs
userspace/selftest/: Cargo.toml
userspace/selftest/src/: main.rs
userspace/shell/: Cargo.toml
(+1 files in other folders)
